se ajustan estilos a la vista previa del carrito

--- a/src/pages/cart/carrito.html
+++ b/src/pages/cart/carrito.html
@@ -74,8 +74,11 @@
   <div class="contenedor-carrito">
     <div class="my-order" id="my-order">
       <div class="my-order-container">
+         <p id="gracias-compra" class="gracias">¡Gracias por tu compra 💖!</p>
         <div class="cabecera">
+          
           <h1 class="title">
+            
             <div class="seleccionar-todo">
               <input type="checkbox" id="select-all" style="margin-right: 10px;" />
             </div>
