--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -84,13 +84,12 @@
       <div class="card-container" id="card-container"></div>
 
       <aside class="product-detail" id="product-detail">
+          <a href="index.html"><img class="cerrar" src="../../assets/icon/icon_close.png" alt="Volver" /></a>
       <div class="title-container">
-        <a href="index.html"><img class="btn-remove" src="../../assets/icon/icon_close.png" alt="Volver" /></a>
+      
         <p class="title">Resumen del pedido</p>
 
       </div>
-
-      <p id="gracias-compra" class="gracias">¡Gracias por tu compra 💖!</p>
 
       <!-- Carrito -->
       <div class="my-order-content" id="cart-content"></div>
