--- a/src/pages/product/detalleprod.html
+++ b/src/pages/product/detalleprod.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalles del producto</title>
-    <link rel="stylesheet" href="detallleprod.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="detallleprod.css">
-    <link rel="stylesheet" href="carrito.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../../assets/css/detalleprod.css">
+    <link rel="stylesheet" href="../../assets/css/global.css">
+    <link rel="stylesheet" href="../../assets/css/header.css">
+    
 </head>
 <body>
 
