se agrega menu mobile

--- a/src/pages/cart/carrito.html
+++ b/src/pages/cart/carrito.html
@@ -18,7 +18,7 @@
 
 <body>
   <div id="toast" class="toast"></div>
-  <nav>
+   <nav>
     <a href="../../pages/home/index.html">
       <img src="../../assets/icon/icon_menu.svg" alt="menu" class="menu" />
     </a>
@@ -34,24 +34,22 @@
         </li>
 
         <li>
-          <a href="../../pages/home/index.html">Clothes</a>
+          <a href="../../pages/cosmetic/belleza.html">Belleza</a>
         </li>
 
         <li>
-          <a href="../../pages/home/index.html">Electronics</a>
+          <a href="../../pages/home/hogar.html">Hogar</a>
         </li>
 
         <li>
-          <a href="../../pages/home/index.html">Furnitures</a>
+          <a href="../../pages/pets/mascotas.html">Mascotas</a>
         </li>
 
         <li>
-          <a href="../../pages/home/index.html">Toys</a>
+          <a href="../../pages/Toys/juguetes.html">Juguetes</a>
         </li>
 
-        <li>
-          <a href="../../pages/home/index.html">Others</a>
-        </li>
+       
       </ul>
     </div>
 
