--- a/src/pages/pets/mascotas.html
+++ b/src/pages/pets/mascotas.html
@@ -4,28 +4,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Belleza</title>
- 
+  <title>Hogar</title>
+
     <link rel="stylesheet" href="../../assets/css/global.css" />
     <link rel="stylesheet" href="../../assets/css/header.css" />
     <link rel="stylesheet" href="../../assets/css/home.css" />
     <link rel="stylesheet" href="../../assets/css/footer.css" />
     <link rel="stylesheet" href="../../assets/css/carrito.css" />
     <link rel="stylesheet" href="../../assets/css/cart.css">
-    <link rel="stylesheet" href="../../assets/css/belleza.css">
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet" />
  
 </head>
 
-<body>
 
-     <div class="hamburger" id="hamburger">
-  <span></span>
-  <span></span>
-  <span></span>
-</div>
-
-  <nav>
+<nav>
     <a href="../../pages/home/index.html">
       <img src="../../assets/icon/icon_menu.svg" alt="menu" class="menu" />
     </a>
@@ -75,20 +67,3 @@
       </ul>
     </div>
   </nav>
-
-  <div class="coming-soon">
-    <h1>💅 Muy pronto</h1>
-    <p>Aquí encontrarás todo sobre belleza: cuidado personal, skin care y más.</p>
-  </div>
-<script>
-    const hamburger = document.getElementById("hamburger");
-  const mobileMenu = document.querySelector(".mobile-menu");
-
-  hamburger.addEventListener("click", () => {
-    hamburger.classList.toggle("active");     // Aquí la magia
-    mobileMenu.classList.toggle("active");
-  });
-  </script>
-</body>
-
-</html>
