--- a/src/pages/product/detalleprod.html
+++ b/src/pages/product/detalleprod.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../../assets/css/header.css" />
     <link rel="stylesheet" href="../../assets/css/home.css" />
     <link rel="stylesheet" href="../../assets/css/footer.css" />
-    <link rel="stylesheet" href="../../assets/css/carrito.css" />
+    <link rel="stylesheet" href="../../assets/css/detalleprod.css" />
    
     
 </head>
