responsive de detalle producto

--- a/src/pages/product/detalleprod.html
+++ b/src/pages/product/detalleprod.html
@@ -79,7 +79,9 @@
             </div>
         </aside>
     </div>
+  <div class="card-container" id="card-container"></div>
 
+  <script type="module" src="../../assets/js/main.js"></script>
   <script>
     
         const cart = JSON.parse(localStorage.getItem('carrito')) || [];
