se ajusta el index

--- a/src/pages/cosmetic/belleza.html
+++ b/src/pages/cosmetic/belleza.html
@@ -26,19 +26,17 @@
 </div>
 
   <nav>
-    <a href="../../pages/home/index.html">
+    <a href="../../../index.html">
       <img src="../../assets/icon/icon_menu.svg" alt="menu" class="menu" />
     </a>
 
     <div class="navbar-left">
-      <a href="../../pages/home/index.html">
+      <a href="../../../index.html">
         <img src="../../assets/logos/logodecayba.png" alt="logo" class="logo" />
       </a>
 
       <ul>
-        <li>
-          <a href="../../pages/home/Misordenes.html"> Tus pedidos </a>
-        </li>
+      
 
         <li>
           <a href="../../pages/cosmetic/belleza.html">Belleza</a>
@@ -62,10 +60,7 @@
 
     <div class="navbar-right">
       <ul>
-        <li class="navbar-email">
-          <a href="editar-cuenta.html"> camila@gmail.com </a>
-        </li>
-
+      
         <li class="navbar-shopping-cart">
           <a id="ver-carrito">
             <img src="../../assets/icon/icon_shopping_cart.svg" alt="shopping cart" />
