--- a/src/pages/cart/carrito.html
+++ b/src/pages/cart/carrito.html
@@ -24,14 +24,12 @@
     </a>
 
     <div class="navbar-left">
-      <a href="../../pages/home/index.html">
+      <a href="../../../index.html">
         <img src="../../assets/logos/logodecayba.png" alt="logo" class="logo" />
       </a>
 
       <ul>
-        <li>
-          <a href="../../pages/home/Misordenes.html"> Tus pedidos </a>
-        </li>
+    
 
         <li>
           <a href="../../pages/cosmetic/belleza.html">Belleza</a>
@@ -55,9 +53,7 @@
 
     <div class="navbar-right">
       <ul>
-        <li class="navbar-email">
-          <a href="editar-cuenta.html"> camila@gmail.com </a>
-        </li>
+  
 
         <li class="navbar-shopping-cart">
           <a id="ver-carrito">
