--- a/src/pages/cart/carrito.html
+++ b/src/pages/cart/carrito.html
@@ -18,51 +18,9 @@
 
 <body>
   <div id="toast" class="toast"></div>
-  <nav>
-    <a href="../../pages/home/index.html">
-      <img src="../../assets/icon/icon_menu.svg" alt="menu" class="menu" />
-    </a>
-
-    <div class="navbar-left">
-      <a href="../../../index.html">
-        <img src="../../assets/logos/logodecayba.png" alt="logo" class="logo" />
-      </a>
-
-      <ul>
-    
-
-        <li>
-          <a href="../../pages/cosmetic/belleza.html">Belleza</a>
-        </li>
-
-        <li>
-          <a href="../../pages/home/hogar.html">Hogar</a>
-        </li>
-
-        <li>
-          <a href="../../pages/pets/mascotas.html">Mascotas</a>
-        </li>
-
-        <li>
-          <a href="../../pages/Toys/juguetes.html">Juguetes</a>
-        </li>
-
-
-      </ul>
-    </div>
-
-    <div class="navbar-right">
-      <ul>
   
-
-        <li class="navbar-shopping-cart">
-          <a id="ver-carrito">
-            <img src="../../assets/icon/icon_shopping_cart.svg" alt="shopping cart" />
-            <div>0</div>
-          </a>
-        </li>
-      </ul>
-    </div>
+   <nav id="header">
+    
   </nav>
 
   <div class="contenedor-carrito">
@@ -93,7 +51,13 @@
   <div class="my-order-content" id="sugerencia"></div>
 
   <div class="card-container" id="card-container"></div>
-
+ <script>
+      fetch('../../components/headerglobal.html')
+    .then(response => response.text())
+    .then(async html => {
+      document.getElementById('header').innerHTML = html;
+  });
+     </script>
  <script type="module" src="../../assets/js/main.js"></script>
 <script>
   document.addEventListener("DOMContentLoaded", () => {
