--- a/src/pages/pets/mascotas.html
+++ b/src/pages/pets/mascotas.html
@@ -15,5 +15,20 @@
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet" />
  
 </head>
+<body>
+  
+ <nav id="header">
+
+  </nav>
+
+    <script>
+    fetch('../../components/headerglobal.html')
+      .then(response => response.text())
+      .then(async html => {
+        document.getElementById('header').innerHTML = html;
+      });
+  </script>
+</body>
+</html>
 
 
