--- a/src/pages/cart/carrito.html
+++ b/src/pages/cart/carrito.html
@@ -7,6 +7,7 @@
   <title>Decayba ‑ Carrito</title>
   <link rel="stylesheet" href="../../assets/css/global.css" />
   <link rel="stylesheet" href="../../assets/css/carrito.css" />
+  <link rel="stylesheet" href="../../assets/css/mobile.css" />
   <link rel="stylesheet" href="../../assets/css/header.css" />
   <link rel="stylesheet" href="../../assets/css/footer.css" />
   <link rel="stylesheet" href="../../assets/css/home.css" />
@@ -17,6 +18,7 @@
 </head>
 
 <body>
+   <div id="contenedor-hamburguesa"></div>
   <div id="toast" class="toast"></div>
   
    <nav id="header">
@@ -271,8 +273,22 @@
       carritoBtn.style.cursor = "not-allowed";
     }
   });
-</script>
 
+  
+ 
+</script>
+<script>
+   // Cargar el HTML del menú hamburguesa
+  fetch('../../components/menuMobile.html')
+    .then(response => response.text())
+    .then(async html => {
+      document.getElementById('contenedor-hamburguesa').innerHTML = html;
+
+      // importar la función desde el módulo
+      const { activarMenuHamburguesa } = await import('./src/assets/js/modules/mobile.js');
+      activarMenuHamburguesa();
+    });
+</script>
 </body>
 
 </html>
