se mejora detalle de producto

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="card-container" id="card-container"></div>
 
       <aside class="product-detail" id="product-detail">
-          <a href="./src/pages/home/index.html"><img class="cerrar" src="./src/assets/icon/icon_close.png" alt="Volver" /></a>
+          <a href="index.html"><img class="cerrar" src="./src/assets/icon/icon_close.png" alt="Volver" /></a>
       <div class="title-container">
       
         <p class="title">Resumen del pedido</p>
