menu mobile funcionando con rutas

--- a/src/pages/home/hogar.html
+++ b/src/pages/home/hogar.html
@@ -18,7 +18,8 @@
 </head>
 
 <body>
-<div id="contenedor-hamburguesa"></div>
+ <!-- Contenedor del menú hamburguesa -->
+  <div id="contenedor-hamburguesa"></div>
 
   <!-- Contenedor del header global -->
   <div id="contenedor-menu"></div>
@@ -32,6 +33,7 @@
     <p>Próximamente artículos para tu hogar: decoración, cocina, y bienestar.</p>
   </div>
 
+ 
   <script type="module">
     // Cargar el header global
     fetch('../../components/headerglobal.html')
