--- a/src/pages/Toys/juguetes.html
+++ b/src/pages/Toys/juguetes.html
@@ -13,43 +13,38 @@
     <link rel="stylesheet" href="../../assets/css/footer.css" />
     <link rel="stylesheet" href="../../assets/css/carrito.css" />
     <link rel="stylesheet" href="../../assets/css/cart.css">
+    <link rel="stylesheet" href="../../assets/css/mobile.css">
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet" />
   
 </head>
 
 <body>
 
-    <div class="hamburger" id="hamburger">
-  <span></span>
-  <span></span>
-  <span></span>
-</div>
- <nav id="header">
+ <!-- Contenedor del menú hamburguesa -->
+  <div id="contenedor-hamburguesa"></div>
 
-  </nav>
-
+  <!-- Contenedor del header global -->
+  <div id="contenedor-menu"></div>
+  <div id="toast" class="toast"></div>
+  <nav id="header"></nav>
 
   <div class="coming-soon">
     <h1>🧸 Muy pronto</h1>
     <p>Estamos preparando una sección con juguetes y diversión para todos.</p>
   </div>
 
-    <script>
+  <script type="module">
+    // Cargar el header global
     fetch('../../components/headerglobal.html')
       .then(response => response.text())
-      .then(async html => {
+      .then(html => {
         document.getElementById('header').innerHTML = html;
       });
-  </script>
-  <script>
-    const hamburger = document.getElementById("hamburger");
-  const mobileMenu = document.querySelector(".mobile-menu");
 
-  hamburger.addEventListener("click", () => {
-    hamburger.classList.toggle("active");     // Aquí la magia
-    mobileMenu.classList.toggle("active");
-  });
-</script>
+    // Cargar y activar menú hamburguesa
+     import { cargarMenuHamburguesa } from '../../assets/js/modules/menu-loader.js';
+  cargarMenuHamburguesa();
+  </script>
 
 </body>
 </html>
