carrito funcionando con aside en todas las paginas{

--- a/src/pages/cosmetic/belleza.html
+++ b/src/pages/cosmetic/belleza.html
@@ -1,52 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Belleza</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Belleza</title>
- 
     <link rel="stylesheet" href="../../assets/css/global.css" />
     <link rel="stylesheet" href="../../assets/css/header.css" />
     <link rel="stylesheet" href="../../assets/css/home.css" />
     <link rel="stylesheet" href="../../assets/css/footer.css" />
     <link rel="stylesheet" href="../../assets/css/carrito.css" />
-    <link rel="stylesheet" href="../../assets/css/cart.css"/>
-    <link rel="stylesheet" href="../../assets/css/belleza.css"/>
-    <link rel="stylesheet" href="../../assets/css/mobile.css"/>
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet" />
- 
-</head>
+    <link rel="stylesheet" href="../../assets/css/belleza.css" />
+   <link rel="stylesheet" href="../../assets/css/mobile.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
- <!-- Contenedor del menú hamburguesa -->
-  <div id="contenedor-hamburguesa"></div>
+  <body>
+    <!-- Contenedor del menú hamburguesa -->
+    <div id="contenedor-hamburguesa"></div>
 
-  <!-- Contenedor del header global -->
-  <div id="contenedor-menu"></div>
-  <div id="toast" class="toast"></div>
-  <nav id="header"></nav>
+    <!-- Contenedor del header global -->
+    <div id="contenedor-menu"></div>
+    <div id="toast" class="toast"></div>
+    <nav id="header"></nav>
 
-  <div class="coming-soon">
-    <h1>💅 Muy pronto</h1>
-    <p>Aquí encontrarás todo sobre belleza: cuidado personal, skin care y más.</p>
-  </div>
+    <aside class="product-detail" id="product-detail">
+      <a href="./belleza.html"
+        ><img
+          class="cerrar"
+          src="../../assets/icon/icon_close.png"
+          alt="Volver"
+      /></a>
+      <div class="title-container">
+        <p class="title">Resumen del pedido</p>
+      </div>
 
-  <script type="module">
-    // Cargar el header global
-    fetch('../../components/headerglobal.html')
-      .then(response => response.text())
-      .then(html => {
-        document.getElementById('header').innerHTML = html;
-      });
+      <!-- Carrito -->
+      <div class="my-order-content" id="cart-content"></div>
 
-    // Cargar y activar menú hamburguesa
-     import { cargarMenuHamburguesa } from '../../assets/js/modules/menu-loader.js';
-  cargarMenuHamburguesa();
-  </script>
+      <!-- Botón WhatsApp
+    <div class="verificar">
+      <a href="#" class="btn-whatsapp" id="btn-whatsapp">WhatsApp</a>
+    </div> -->
 
+      <!-- Botón Ver Carrito -->
+      <div class="verificar">
+        <a href="../cart/carrito.html" class="btn-carrito" id="btn-carrito"
+          >Ver Carrito</a
+        >
+      </div>
+    </aside>
 
+    <div class="coming-soon">
+      <h1>💅 Muy pronto</h1>
+      <p>
+        Aquí encontrarás todo sobre belleza: cuidado personal, skin care y más.
+      </p>
+    </div>
 
-</body>
+    <h2 class="sugerencias-titulo">Algunas sugerencias para ti</h2>
 
+    <div class="card-container" id="card-container"></div>
+
+    <script type="module">
+      // Cargar el header global
+      fetch("../../components/headerglobal.html")
+        .then((response) => response.text())
+        .then((html) => {
+          document.getElementById("header").innerHTML = html;
+        });
+
+      // Cargar y activar menú hamburguesa
+      import { cargarMenuHamburguesa } from "../../assets/js/modules/menu-loader.js";
+      cargarMenuHamburguesa();
+    </script>
+
+    <script type="module" src="../../assets/js/main.js"></script>
+  </body>
 </html>
