--- a/src/pages/Toys/juguetes.html
+++ b/src/pages/Toys/juguetes.html
@@ -5,14 +5,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Juguetes</title>
-  
+    
+
     <link rel="stylesheet" href="../../assets/css/global.css" />
     <link rel="stylesheet" href="../../assets/css/juguetes.css" />
     <link rel="stylesheet" href="../../assets/css/header.css" />
     <link rel="stylesheet" href="../../assets/css/home.css" />
     <link rel="stylesheet" href="../../assets/css/footer.css" />
     <link rel="stylesheet" href="../../assets/css/carrito.css" />
-    <link rel="stylesheet" href="../../assets/css/cart.css">
+    
     <link rel="stylesheet" href="../../assets/css/mobile.css">
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet" />
   
@@ -27,12 +28,37 @@
   <div id="contenedor-menu"></div>
   <div id="toast" class="toast"></div>
   <nav id="header"></nav>
+ <aside class="product-detail" id="product-detail">
+      <a href="./juguetes.html"
+        ><img
+          class="cerrar"
+          src="../../assets/icon/icon_close.png"
+          alt="Volver"
+      /></a>
+      <div class="title-container">
+        <p class="title">Resumen del pedido</p>
+      </div>
 
+      <!-- Carrito -->
+      <div class="my-order-content" id="cart-content"></div>
+
+      <!-- Botón WhatsApp
+    <div class="verificar">
+      <a href="#" class="btn-whatsapp" id="btn-whatsapp">WhatsApp</a>
+    </div> -->
+
+      <!-- Botón Ver Carrito -->
+      <div class="verificar">
+        <a href="../cart/carrito.html" class="btn-carrito" id="btn-carrito"
+          >Ver Carrito</a
+        >
+      </div>
+    </aside>
   <div class="coming-soon">
     <h1>🧸 Muy pronto</h1>
     <p>Estamos preparando una sección con juguetes y diversión para todos.</p>
   </div>
-
+<div class="card-container" id="card-container"></div>
   <script type="module">
     // Cargar el header global
     fetch('../../components/headerglobal.html')
@@ -45,7 +71,8 @@
      import { cargarMenuHamburguesa } from '../../assets/js/modules/menu-loader.js';
   cargarMenuHamburguesa();
   </script>
-
+ <script type="module" src="../../assets/js/main.js"></script>
+  </body>
 </body>
 </html>
 
