--- a/src/pages/pets/mascotas.html
+++ b/src/pages/pets/mascotas.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="../../assets/css/home.css" />
     <link rel="stylesheet" href="../../assets/css/footer.css" />
     <link rel="stylesheet" href="../../assets/css/carrito.css" />
-    <link rel="stylesheet" href="../../assets/css/cart.css">
     <link rel="stylesheet" href="../../assets/css/mobile.css">
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet" />
  
@@ -25,6 +24,33 @@
   <div id="toast" class="toast"></div>
   <nav id="header"></nav>
 
+   <aside class="product-detail" id="product-detail">
+      <a href="./mascotas.html"
+        ><img
+          class="cerrar"
+          src="../../assets/icon/icon_close.png"
+          alt="Volver"
+      /></a>
+      <div class="title-container">
+        <p class="title">Resumen del pedido</p>
+      </div>
+
+      <!-- Carrito -->
+      <div class="my-order-content" id="cart-content"></div>
+
+      <!-- Botón WhatsApp
+    <div class="verificar">
+      <a href="#" class="btn-whatsapp" id="btn-whatsapp">WhatsApp</a>
+    </div> -->
+
+      <!-- Botón Ver Carrito -->
+      <div class="verificar">
+        <a href="../cart/carrito.html" class="btn-carrito" id="btn-carrito"
+          >Ver Carrito</a
+        >
+      </div>
+    </aside>
+<div class="card-container" id="card-container"></div>
     <script type="module">
     // Cargar el header global
     fetch('../../components/headerglobal.html')
@@ -37,6 +63,8 @@
      import { cargarMenuHamburguesa } from '../../assets/js/modules/menu-loader.js';
   cargarMenuHamburguesa();
   </script>
+
+   <script type="module" src="../../assets/js/main.js"></script>
 </body>
 </html>
 
