--- a/src/pages/product/detalleprod.html
+++ b/src/pages/product/detalleprod.html
@@ -20,9 +20,7 @@
 
 <body>
   <div id="toast" class="toast"></div>
-  <nav id="header">
-
-  </nav>
+  <nav id="header"></nav>
 
   <div class="product-detaill" id="product-detaill">
     <aside class="imagen">
